Refactoring swagger and commit a test with a error ;/
