# pkg/ordine/controllers/delete_ordine.go
@@ -1,8 +1,10 @@
 package controllers
 
 import (
+	"errors"
 	"fmt"
 	"net/http"
+	"ordine-api/pkg/ordine"
 	"ordine-api/pkg/ordine/services"
 	"ordine-api/pkg/utils"
 
@@ -19,14 +21,21 @@ import (
 // @Param			id	path		string	true	"Ordine id"
 // @Success		200		{object}	utils.GenericResponse "Resource deleted successfully"
 // @Failure		400		{object}	utils.GenericResponse "Error trying to delete ordine"
-// @Router			/ordines/{id} [delete]
+// @Router			/ordine/{id} [delete]
 func DeleteOrdine(ctx *gin.Context) {
 	err := services.RemoveOrdine(ctx.Param("id"))
 	if err != nil {
-		ctx.JSON(http.StatusBadRequest, utils.GenericResponse{
+		if errors.Is(err, ordine.ErrorOrdineNotFound) {
+			ctx.JSON(http.StatusBadRequest, utils.GenericResponse{
+				Message: fmt.Sprintf("Ordine not found: %s", err.Error()),
+			})
+			return
+		}
+		ctx.JSON(http.StatusInternalServerError, utils.GenericResponse{
 			Message: fmt.Sprintf("Error trying to delete ordine: %s", err.Error()),
 		})
 		return
+
 	}
 
 	ctx.JSON(http.StatusOK, utils.GenericResponse{
